[workspace]
resolver = "2"

members = [
    "crates/*",
]

[workspace.dependencies]
log = "0.4"
yamux = "0.13"
futures = "0.3"
clap = "4.4"
async-trait = "0.1"
async-std = "1.12"
httparse = "1.8"
tls-parser = "0.11"
rtsp-types = "0.1"
tracing-subscriber = "0.3"
atm0s-sdn = "0.2"
serde = "1.0"
bincode = "1.3"
metrics-dashboard = "0.2"
poem = "2.0"
metrics = "0.22"
quinn = "0.11"
rustls = "0.23"
ed25519-dalek = "2.1"
rand = "0.8"
rcgen = "0.13"
url = "2.5"
base64 = "0.22"
local-ip-address = "0.6"
