[workspace]
resolver = "2"

members = [
    "bin/agent",
    "bin/relayer",
    "crates/*",
]

[workspace.dependencies]
protocol = { path = "crates/protocol", package = "atm0s-reverse-proxy-protocol", version = "0.2.1" }
protocol-ed25519 = { path = "crates/protocol_ed25519", package = "atm0s-reverse-proxy-protocol-ed25519", version = "0.1.3" }

log = "0.4"
tokio-yamux = "0.3"
clap = "4.4"
async-trait = "0.1"
tokio = "1"
httparse = "1.8"
tls-parser = "0.11"
rtsp-types = "0.1"
tracing-subscriber = "0.3"
atm0s-sdn = "0.2"
serde = "1.0"
bincode = "1.3"
metrics-dashboard = "0.3"
poem = "2.0"
metrics = "0.22"
quinn = "0.11"
rustls = "0.23"
ed25519-dalek = "2.1"
rand = "0.8"
rcgen = "0.13"
url = "2.5"
base64 = "0.22"
local-ip-address = "0.6"
derive_more = "1.0"
thiserror = "1.0"
anyhow = "1.0"
parking_lot = "0.12"
futures = "0.3"
tokio-util = "0.7"
test-log = "0.2"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
