[package]
name = "atm0s-reverse-proxy-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["default", "attributes", "unstable"] }
async-trait = "0.1.74"
clap = { version = "4.4.11", features = ["derive", "env"] }
futures = "0.3.4"
log = "0.4.20"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "std"], optional = true }
yamux = "0.13.1"
bincode = "1.3.3"
serde = { version = "1.0.193", features = ["derive"] }
protocol = { path = "../protocol", package = "atm0s-reverse-proxy-protocol" }
protocol-ed25519 = { path = "../protocol_ed25519", package = "atm0s-reverse-proxy-protocol-ed25519", optional = true }
quinn = { version = "0.11", features = ["ring", "runtime-async-std", "futures-io"] }
rustls = { version = "0.23", features = ["ring", "std"] }
url = "2.5.0"
base64 = "0.22.1"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1

[features]
default = ["binary"]
binary = ["protocol-ed25519", "tracing-subscriber"]
