[package]
name = "atm0s-reverse-proxy-agent"
version = "0.1.0"
edition = "2021"
description = "Agent for reverse proxy cluster"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { workspace = true, features = ["default", "attributes", "unstable"] }
async-trait = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
futures = { workspace = true }
log = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "std"], optional = true }
yamux = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true, features = ["derive"] }
protocol = { path = "../protocol", package = "atm0s-reverse-proxy-protocol" }
protocol-ed25519 = { path = "../protocol_ed25519", package = "atm0s-reverse-proxy-protocol-ed25519", optional = true }
quinn = { workspace = true, features = ["ring", "runtime-async-std", "futures-io"] }
rustls = { workspace = true, features = ["ring", "std"] }
url = { workspace = true }
base64 = { workspace = true }

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1

[features]
default = ["binary"]
binary = ["protocol-ed25519", "tracing-subscriber"]
