[package]
name = "atm0s-reverse-proxy-agent"
version = "0.2.0"
edition = "2021"
description = "Agent for reverse proxy cluster"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true, features = ["full"] }
futures = { version = "0.3" }
async-trait = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
log = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "std"], optional = true }
tokio-yamux = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true, features = ["derive"] }
protocol = { path = "../protocol", package = "atm0s-reverse-proxy-protocol", version = "0.2.1" }
protocol-ed25519 = { path = "../protocol_ed25519", package = "atm0s-reverse-proxy-protocol-ed25519", optional = true, version = "0.1.3" }
quinn = { workspace = true, features = ["ring", "runtime-tokio", "futures-io"] }
rustls = { workspace = true, features = ["ring", "std"] }
url = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[features]
default = ["binary"]
binary = ["protocol-ed25519", "tracing-subscriber"]
