[package]
name = "atm0s-reverse-proxy-cert-utils"
version = "0.1.0"
edition = "2021"
description = "Cert utils for atm0s-reverse proxy cluster"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rcgen = { workspace = true }
rustls = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
