[package]
name = "atm0s-simple-p2p"
version = "0.1.0"
edition = "2021"
description = "A lightweight peer-to-peer network utilizing the atm0s routing mechanism, built entirely with async programming and QUIC (using the quinn library)."
license = "MIT"

[dependencies]
tokio = { workspace = true, features = ["io-util", "sync"] }
anyhow = { workspace = true }
quinn = { workspace = true, features = ["ring", "runtime-tokio", "futures-io"] }
rustls = { workspace = true, features = ["ring", "std"] }
log = { workspace = true }
serde = { workspace = true }
derive_more = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }
bincode = { workspace = true }
tokio-util = { workspace = true }
lru = { workspace = true }

[dev-dependencies]
test-log = { workspace = true }