[package]
name = "atm0s-reverse-proxy-protocol"
version = "0.2.0"
edition = "2021"
description = "Protocol for atm0s-reverse proxy cluster"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true, features = ["derive"] }
bincode = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }