[package]
name = "atm0s-reverse-proxy-protocol-ed25519"
version = "0.1.2"
edition = "2021"
description = "Protocol implement with Ed25519 for atm0s-reverse proxy cluster"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { workspace = true }
ed25519-dalek = { workspace = true, features = ["rand_core", "serde", "pkcs8", "pem"] }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
protocol = { path = "../protocol", package = "atm0s-reverse-proxy-protocol", version = "0.2.0" }
