[package]
name = "atm0s-reverse-proxy-relayer"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1.12.0", features = ["default", "attributes", "unstable", "tokio1"] }
async-trait = "0.1.74"
clap = { version = "4.4.11", features = ["derive", "env"], optional = true }
futures = "0.3.4"
httparse = "1.8.0"
log = "0.4.20"
tls-parser = "0.11.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "std"] }
yamux = "0.13.1"
protocol = { path = "../protocol", package = "atm0s-reverse-proxy-protocol"}
protocol-ed25519 = { path = "../protocol_ed25519", package = "atm0s-reverse-proxy-protocol-ed25519", optional = true }
serde = { version = "1.0.193", features = ["derive"] }
metrics-dashboard = { version = "0.1.3", features = ["system"], optional = true }
poem = { version = "1.3.59", optional = true }
metrics = { version = "0.21.1" }
quinn = { git = "https://github.com/quinn-rs/quinn.git", branch = "rustls-0.22", features = ["runtime-async-std", "futures-io"] }
rustls = { version = "0.23", features = ["ring", "std"] }
rcgen = "0.12.0"
atm0s-sdn = { git = "https://github.com/8xFF/atm0s-sdn.git", rev = "e2c593686768299eb991665d63485f20304f7e30" }

[features]
default = ["binary"]
expose-metrics = ["metrics-dashboard", "poem"]
binary = ["protocol-ed25519", "clap"]
